[gd_scene load_steps=4 format=3 uid="uid://b1d47ak41ngx6"]

[ext_resource type="Script" path="res://Scripts/Component_Code/Player_Movement_Compnent.gd" id="1_u7220"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et7u2"]
bg_color = Color(0.0941176, 0.462745, 0.784314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4854"]
bg_color = Color(0.580392, 0.839216, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Player_Movement_Compnent" type="Node2D"]
script = ExtResource("1_u7220")

[node name="DashCoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCoolDownUI" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -40.0
offset_right = 18.0
offset_bottom = -34.0
theme_override_styles/background = SubResource("StyleBoxFlat_et7u2")
theme_override_styles/fill = SubResource("StyleBoxFlat_b4854")
max_value = 3.0
step = 0.05
value = 2.0
fill_mode = 1
show_percentage = false

[connection signal="timeout" from="DashCoolDownTimer" to="." method="_on_dash_cool_down_timer_timeout"]
